[metadata]
name = cluster-retta95
version = 0.0.1
author = Retta El Sayed
author_email = relsay2@emory.edu
description = Cluster of Weather data and Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/retta95/Cluster
project_urls =
    Bug Tracker = https://github.com/retta95/Cluster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src